--- a/PHPAccount/assets/css/style.css
+++ b/PHPAccount/assets/css/style.css
@@ -1,198 +1,179 @@
-/*-----------------------------------*\
-  #style.css
-\*-----------------------------------*/
-
-/**
- * copyright 2023 codewithsadee
- */
-
-
-
-
-
-/*-----------------------------------*\
-  #CUSTOM PROPERTY
-\*-----------------------------------*/
 
 :root {
 
   --white: hsl(0, 0%, 100%);
---overlay-bg: hsla(0, 3%, 13%, 0.5);
-   
---light-background: hsl(0, 0%, 96%);
---light-on-background: hsl(0, 3%, 13%);
---light-on-background-variant: hsl(20, 3%, 19%);
---light-primary: hsl(11, 87%, 59%);
---light-primary-hover: hsl(11, 60%, 50%);
---light-primary-container: hsl(14, 57%, 95%);
---light-error: hsl(1, 73%, 42%);
---light-active-indicator: hsl(12, 58%, 88%);
---light-image-background: hsl(0, 0%, 70%);
---light-badge-btn: hsl(30, 58%, 88%);
---light-on-badge-btn: hsl(24, 7%, 14%);
---light-outline: hsl(10, 19%, 88%);
---light-input-outline: hsl(7, 7%, 73%);
---light-input-outline-hover: hsl(9, 3%, 52%);
---light-alpha-10: hsla(0, 0%, 0%, 0.1);
---light-alpha-20: hsla(0, 0%, 0%, 0.2);
+  --overlay-bg: hsla(0, 3%, 13%, 0.5);
 
+  /*---- Light theme----- */
+  --light-background: hsl(0, 0%, 96%);
+  --light-on-background: hsl(0, 3%, 13%);
+  --light-on-background-variant: hsl(20, 3%, 19%);
+  --light-primary: hsl(11, 87%, 59%);
+  --light-primary-hover: hsl(11, 60%, 50%);
+  --light-primary-container: hsl(14, 57%, 95%);
+  --light-error: hsl(1, 73%, 42%);
+  --light-active-indicator: hsl(12, 58%, 88%);
+  --light-image-background: hsl(0, 0%, 70%);
+  --light-badge-btn: hsl(30, 58%, 88%);
+  --light-on-badge-btn: hsl(24, 7%, 14%);
+  --light-outline: hsl(10, 19%, 88%);
+  --light-input-outline: hsl(7, 7%, 73%);
+  --light-input-outline-hover: hsl(9, 3%, 52%);
+  --light-alpha-10: hsla(0, 0%, 0%, 0.1);
+  --light-alpha-20: hsla(0, 0%, 0%, 0.2);
 
---dark-background: hsl(0, 0%, 10%);
---dark-on-background: hsl(11, 3%, 87%);
---dark-on-background-variant: hsl(11, 3%, 81%);
---dark-primary: hsl(11, 87%, 64%);
---dark-primary-hover: hsl(11, 51%, 51%);
---dark-primary-container: hsl(15, 3%, 15%);
---dark-error: hsl(1, 69%, 59%);
---dark-active-indicator: hsl(15, 25%, 22%);
---dark-image-background: hsl(0, 0%, 30%);
---dark-badge-btn: hsl(30, 28%, 13%);
---dark-on-badge-btn: hsl(30, 8%, 86%);
---dark-outline: hsl(11, 3%, 20%);
---dark-input-outline: hsl(11, 3%, 29%);
---dark-input-outline-hover: hsl(0, 4%, 58%);
---dark-alpha-10: hsla(0, 0%, 100%, 0.1);
---dark-alpha-20: hsla(0, 0%, 100%, 0.2);
+  /* ----Dark theme----- */
+  --dark-background: hsl(0, 0%, 10%);
+  --dark-on-background: hsl(11, 3%, 87%);
+  --dark-on-background-variant: hsl(11, 3%, 81%);
+  --dark-primary: hsl(11, 87%, 64%);
+  --dark-primary-hover: hsl(11, 51%, 51%);
+  --dark-primary-container: hsl(15, 3%, 15%);
+  --dark-error: hsl(1, 69%, 59%);
+  --dark-active-indicator: hsl(15, 25%, 22%);
+  --dark-image-background: hsl(0, 0%, 30%);
+  --dark-badge-btn: hsl(30, 28%, 13%);
+  --dark-on-badge-btn: hsl(30, 8%, 86%);
+  --dark-outline: hsl(11, 3%, 20%);
+  --dark-input-outline: hsl(11, 3%, 29%);
+  --dark-input-outline-hover: hsl(0, 4%, 58%);
+  --dark-alpha-10: hsla(0, 0%, 100%, 0.1);
+  --dark-alpha-20: hsla(0, 0%, 100%, 0.2);
 
---font-primary: 'DM Serif Display', serif;
---font-secondary: 'DM Sans', sans-serif;
+  /*---FONTS---*/
 
---fs-base: 62.5%;
---fs-display-large: 2.8rem;
---fs-display-medium: 3.2rem;
---fs-display-small: 2.6rem;
---fs-headline-small: 2.4rem;
---fs-title-medium: 1.6rem;
---fs-title-small: 1.4rem;
---fs-body-large: 1.6rem;
---fs-body-medium: 1.4rem;
---fs-label-large: 1.4rem;
---fs-label-medium: 1.2rem;
---fs-label-small: 1.1rem;
+  --font-primary: 'DM Serif Display', serif;
+  --font-secondary: 'DM Sans', sans-serif;
 
---weight-regular: 400;
---weight-medium: 500;
+  --fs-base: 62.5%;
+  --fs-display-large: 2.8rem;
+  --fs-display-medium: 3.2rem;
+  --fs-display-small: 2.6rem;
+  --fs-headline-small: 2.4rem;
+  --fs-title-medium: 1.6rem;
+  --fs-title-small: 1.4rem;
+  --fs-body-large: 1.6rem;
+  --fs-body-medium: 1.4rem;
+  --fs-label-large: 1.4rem;
+  --fs-label-medium: 1.2rem;
+  --fs-label-small: 1.1rem;
 
---radius-4: 4px;
---radius-8: 8px;
---radius-circle: 50%;
---radius-pill: 500px;
+  --weight-regular: 400;
+  --weight-medium: 500;
 
---shadow-1: 0 -1px 8px hsla(0, 0%, 0%, 0.2);
---shadow-2: 0 2px 4px 1px hsla(0, 0%, 0%, 0.3);
+  --radius-4: 4px;
+  --radius-8: 8px;
+  --radius-circle: 50%;
+  --radius-pill: 500px;
 
---header-height: 64px;
---mobile-nav-height: 80px;
---section-gap: 32px;
+  --shadow-1: 0 -1px 8px hsla(0, 0%, 0%, 0.2);
+  --shadow-2: 0 2px 4px 1px hsla(0, 0%, 0%, 0.3);
+
+  --header-height: 64px;
+  --mobile-nav-height: 80px;
+  --section-gap: 32px;
 
 }
 
 @media(prefers-reduced-motion: no-preference) {
-  :root{
+  :root {
+
     --transition-timing-function: cubic-bezier(0.2, 0, 0, 1);
---transition-short: 200ms var(--transition-timing-function);
---transition-medium: 500ms var(--transition-timing-function);
+    --transition-short: 200ms var(--transition-timing-function);
+    --transition-medium: 500ms var(--transition-timing-function);
+
   }
 }
 
-[data-theme="light"]{
+[data-theme="light"] {
   color-scheme: light;
 
-  --background: var(--light-background); 
+  --background: var(--light-background);
   --on-background: var(--light-on-background);
-  --on-background-variant: var(--light-on-background-variant); 
-  --primary: var(--light-primary); 
-  ---primary-hover: var(--light-primary-hover); 
+  --on-background-variant: var(--light-on-background-variant);
+  --primary: var(--light-primary);
+  --primary-hover: var(--light-primary-hover);
   --primary-container: var(--light-primary-container);
-  ---error: var(--light-error); 
+  --error: var(--light-error);
   --active-indicator: var(--light-active-indicator);
   --image-background: var(--light-image-background);
   --badge-btn: var(--light-badge-btn);
   --on-badge-btn: var(--light-on-badge-btn);
   --outline: var(--light-outline);
   --input-outline: var(--light-input-outline);
-  --input-outline-hover: var(--light-input-outline-hover); 
+  --input-outline-hover: var(--light-input-outline-hover);
   --alpha-10: var(--light-alpha-10);
   --alpha-20: var(--light-alpha-20);
-
 }
 
-[data-theme="dark"]{
+[data-theme="dark"] {
   color-scheme: dark;
 
-  --background: var(--dark-background); 
+  --background: var(--dark-background);
   --on-background: var(--dark-on-background);
-  --on-background-variant: var(--dark-on-background-variant); 
-  --primary: var(--dark-primary); 
-  ---primary-hover: var(--dark-primary-hover); 
+  --on-background-variant: var(--dark-on-background-variant);
+  --primary: var(--dark-primary);
+  --primary-hover: var(--dark-primary-hover);
   --primary-container: var(--dark-primary-container);
-  ---error: var(--dark-error); 
+  --error: var(--dark-error);
   --active-indicator: var(--dark-active-indicator);
   --image-background: var(--dark-image-background);
   --badge-btn: var(--dark-badge-btn);
   --on-badge-btn: var(--dark-on-badge-btn);
   --outline: var(--dark-outline);
   --input-outline: var(--dark-input-outline);
-  --input-outline-hover: var(--dark-input-outline-hover); 
+  --input-outline-hover: var(--dark-input-outline-hover);
   --alpha-10: var(--dark-alpha-10);
   --alpha-20: var(--dark-alpha-20);
-
 }
 
 
 
-/*-----------------------------------*\
-  #RESET
-\*-----------------------------------*/
-
 *,
 *::before,
-*::after{
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-li {list-style: none;}
+li { list-style: none; }
 
 a,
 img,
 span,
 input,
-button {display: block;}
+button { display: block; }
 
-
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-img{
-  height: auto;
-}
+img { height: auto; }
 
 input,
-button{
+button {
   background: none;
   border: none;
   font: inherit;
 }
 
-input{width: 100%;}
+input { width: 100%; }
 
-button{
+button {
   color: inherit;
   cursor: pointer;
 }
 
-html{
+html {
   font-family: var(--font-secondary);
   font-size: var(--fs-base);
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
 }
 
-body{
+body {
   background-color: var(--background);
   color: var(--on-background);
   font-size: var(--fs-body-medium);
@@ -202,30 +183,29 @@ body{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-block: calc(var(--header-height)+16px) var(--mobile-nav-height) ;
+  padding-block: calc(var(--header-height) + 16px) var(--mobile-nav-height);
   opacity: 0;
   animation: fade 300ms var(--transition-timing-function) forwards;
 }
 
 @keyframes fade {
-  0% {opacity: 0, ;}
-  100% {opacity: 1, ;}
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
-main{flex-grow: 1;}
+main { flex-grow: 1; }
 
-:focus-visible {outline-color: var(--primary);}
-
-
+:focus-visible { outline-color: var(--primary); }
 
 
 
 
-/*-----------------------------------*\
-  #TYPOGRAPHY
-\*-----------------------------------*/
 
-.display-large{
+
+/*----TYPOGRAPHY----*/
+
+
+.display-large {
   font-family: var(--font-primary);
   font-size: var(--fs-display-large);
   font-weight: var(--weight-regular);
@@ -238,88 +218,87 @@ main{flex-grow: 1;}
   line-height: 36px;
 }
 
-.display-small{
+.display-small {
   font-family: var(--font-primary);
   font-size: var(--fs-display-small);
   font-weight: var(--weight-regular);
   line-height: 32px;
 }
 
-.headline-small{
+.headline-small {
   font-size: var(--fs-headline-small);
   font-weight: var(--weight-regular);
   line-height: 32px;
 }
 
-.title-medium{
+.title-medium {
   font-size: var(--fs-title-medium);
   font-weight: var(--weight-medium);
   line-height: 24px;
   letter-spacing: 0.15px;
 }
 
-.title-small{
+.title-small {
   font-size: var(--fs-title-small);
   font-weight: var(--weight-medium);
   line-height: 20px;
   letter-spacing: 0.1px;
 }
 
-.body-large{
+.body-large {
   font-size: var(--fs-body-large);
   line-height: 24px;
   letter-spacing: 0.5px;
 }
 
-.body-medium{
+.body-medium {
   font-size: var(--fs-body-medium);
   line-height: 20px;
   letter-spacing: 0.25px;
 }
 
-.label-large{
+.label-large {
   font-size: var(--fs-label-large);
   font-weight: var(--weight-medium);
   line-height: 20px;
-  letter-spacing: 0.1px;
+  letter-spacing: 0.1pxl
 }
 
-.label-medium{
+.label-medium {
   font-size: var(--fs-label-medium);
   font-weight: var(--weight-medium);
   line-height: 16px;
   letter-spacing: 0.5px;
 }
 
-.label-small{
+.label-small {
   font-size: var(--fs-label-small);
   font-weight: var(--weight-medium);
   line-height: 16px;
   letter-spacing: 0.5px;
 }
-/*-----------------------------------*\
-  #REUSED STYLE
-\*-----------------------------------*/
-.has-state{
+
+/*----POMOSNIE WYKORZYSTANY STYL---*/
+.has-state {
   position: relative;
   overflow: hidden;
 }
 
-.has-state::after{
+.has-state::after {
   content: "";
   position: absolute;
   inset: 0;
   transition: var(--transition-short);
 }
 
-.has-state:where(:hover, :focus-visible):not(:active)::after{
+.has-state:where(:hover, :focus-visible):not(:active)::after {
   background-color: var(--alpha-10);
 }
 
-.material-symbols-outlined{
+.material-symbols-outlined {
   display: block;
-  width: lem;
-  height: lem;
+  width: 1em;
+  height: 1em;
   overflow: hidden;
   font-variation-settings:
   'FILL' 0,
@@ -329,42 +308,18 @@ main{flex-grow: 1;}
 }
 
 
-/*-----------------------------------*\
-  #COMPONENTS
-\*-----------------------------------*/
-
-/**
- * Mobile nav
- */
-
-
-/**
- * Secondary tab
- */
-
-
-/**
- * Card
- */
-
-
-/**
- * Icon Button
- */
- .icon-btn{
+/*----ICON BUTTON---*/
+.icon-btn {
   width: 40px;
   height: 40px;
   display: grid;
   place-items: center;
   background-color: var(--primary-container);
   border-radius: var(--radius-circle);
- }
+}
 
-/**
- * Button
- */
-
- .btn{
+/*----BUTTON----*/
+.btn {
   height: 40px;
   max-width: max-content;
   padding-inline: 24px;
@@ -374,77 +329,28 @@ main{flex-grow: 1;}
   gap: 8px;
   border-radius: var(--radius-4);
   transition: var(--transition-short);
- }
+}
 
- .btn.material-symbols-outlined{
-  font-size: 1.8rem;
- }
+.btn .material-symbols-outlined { font-size: 1.8rem; }
 
- .btn.has-icon{
-  padding-inline-start: 16px;
- }
+.btn.has-icon { padding-inline-start: 16px; }
 
-
-/* primary button */
-
-.btn-primary{
+.btn-primary {
   background-color: var(--primary);
   color: var(--white);
 }
 
-.btn-primary:where(:hover, :focus-visible):not(:active){
-  background-color: var(---primary-hover);
+.btn-primary:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--primary-hover);
 }
 
-/* secondary button */
+.btn-secondary { background-color: var(--primary-container); }
 
-.btn-secondar{
-  background-color: var(--primary-container);
-}
-
-/* badge button */
-
-/* filter button */
-
-
-/**
- * Input
- */
-
-
-/**
- * Filter chip
- */
-
-
-/**
- * Badge
- */
-
-
-/**
- * Skeleton
- */
-
-
-/**
- * Snackbar
- */
-
-
-
-
-
-/*-----------------------------------*\
-  #HEADER
-\*-----------------------------------*/
-
+/*---HEADER---*/
 .navbar,
-.header .btn-primary{
-  display: none;
-}
+.header .btn-primary { display: none; }
 
-.header{
+.header {
   background-color: var(--background);
   position: fixed;
   top: 0;
@@ -452,7 +358,6 @@ main{flex-grow: 1;}
   width: 100%;
   height: var(--header-height);
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 20px;
   padding-inline: 16px;
@@ -460,141 +365,9 @@ main{flex-grow: 1;}
   z-index: 4;
 }
 
-.theme-switch {
-  margin-inline-start: auto;
-}
+.theme-switch { margin-inline-start: auto; }
 
 [data-theme="light"] :where(.logo-dark, .theme-switch .light-icon),
-[data-theme="dark"] :where(.logo-light, .theme-switch .dark-icon){
+[data-theme="dark"] :where(.logo-light, .theme-switch .dark-icon) {
   display: none;
 }
-
-
-
-
-
-.mobile-nav{
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: var(--mobile-nav-height);
-  background-color: var(--primary-container);
-  color: var(--on-background-variant);
-  padding-block: 12px 16px;
-  z-index: 4;
-  box-shadow: var(--shadow-1);
-}
-
-
-.mobile-nav .nav-list{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-}
-
-.mobile-nav .nav-link[aria-current="true"]{
-  color: var(--on-background);
-}
-
-.mobile-nav .item-icon{
-  width: 64px;
-  height: 32px;
-  display: grid;
-  place-items: center;
-  border-radius: var(--radius-pill);
-  margin-inline: auto;
-  margin-block-end: 4px;
-  transition: var(--transition-short);
-}
-
-.mobile-nav .nav-link:where(:hover, :focus-visible) .item-icon{
-  background-color: var(--alpha-10);
-}
-
-.mobile-nav .nav-link[aria-current="true"] {color: var(--on-background);}
-
-.mobile-nav .nav-link[aria-current="true"] .item-icon{
-  background-color: var(--active-indicator);
-}
-
-.mobile-nav .nav-link[aria-current="true"] .material-symbols-outlined {
-  font-variation-settings: 'FILL' 1;
-}
-/*-----------------------------------*\
-  #HERO
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #TAB
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #RECIPE SLIDER
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #TAG
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #FOOTER
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #FILTER BAR
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #RECIPE PAGE
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #DETAIL PAGE
-\*-----------------------------------*/
-
-/* Skeleton */
-
-
-
-
-
-/*-----------------------------------*\
-  #SAVED RECIPE PAGE
-\*-----------------------------------*/
-
-
-
-
-
-/*-----------------------------------*\
-  #MEDIA QUERIES
-\*-----------------------------------*/
