--- a/PHPAccount/assets/css/style.css
+++ b/PHPAccount/assets/css/style.css
@@ -1,4 +1,3 @@
-
 :root {
 
   --white: hsl(0, 0%, 100%);
@@ -137,20 +136,26 @@
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
 a,
 img,
 span,
 input,
-button { display: block; }
+button {
+  display: block;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-img { height: auto; }
+img {
+  height: auto;
+}
 
 input,
 button {
@@ -159,7 +164,9 @@ button {
   font: inherit;
 }
 
-input { width: 100%; }
+input {
+  width: 100%;
+}
 
 button {
   color: inherit;
@@ -189,13 +196,22 @@ body {
 }
 
 @keyframes fade {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
-main { flex-grow: 1; }
+main {
+  flex-grow: 1;
+}
 
-:focus-visible { outline-color: var(--primary); }
+:focus-visible {
+  outline-color: var(--primary);
+}
 
 
 
@@ -301,10 +317,52 @@ main { flex-grow: 1; }
   height: 1em;
   overflow: hidden;
   font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24;
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+}
+
+
+.section {
+  margin-block-end: var(--section-gap);
+}
+
+.container {
+  max-width: 1130px;
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 16px;
+}
+
+
+.tab-list {
+  display: flex;
+  color: var(--on-background-variant);
+  box-shadow: inset 0 -1px 0 var(--outline);
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+
+.tab-list::-webkit-scrollbar {
+  display: none;
+}
+
+.tab-btn {
+  height: 48px;
+  padding-inline: 24px;
+  border-block-end: 2px solid transparent;
+  transition: var(--transition-short);
+  flex: 1 0 80px;
+}
+
+.tab-btn:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--alpha-10);
+}
+
+.tab-btn[aria-selected="true"] {
+  color: var(--on-background);
+  border-color: var(--primary);
 }
 
 
@@ -331,9 +389,13 @@ main { flex-grow: 1; }
   transition: var(--transition-short);
 }
 
-.btn .material-symbols-outlined { font-size: 1.8rem; }
+.btn .material-symbols-outlined {
+  font-size: 1.8rem;
+}
 
-.btn.has-icon { padding-inline-start: 16px; }
+.btn.has-icon {
+  padding-inline-start: 16px;
+}
 
 .btn-primary {
   background-color: var(--primary);
@@ -344,11 +406,15 @@ main { flex-grow: 1; }
   background-color: var(--primary-hover);
 }
 
-.btn-secondary { background-color: var(--primary-container); }
+.btn-secondary {
+  background-color: var(--primary-container);
+}
 
 /*---HEADER---*/
 .navbar,
-.header .btn-primary { display: none; }
+.header .btn-primary {
+  display: none;
+}
 
 .header {
   background-color: var(--background);
@@ -365,7 +431,9 @@ main { flex-grow: 1; }
   z-index: 4;
 }
 
-.theme-switch { margin-inline-start: auto; }
+.theme-switch {
+  margin-inline-start: auto;
+}
 
 [data-theme="light"] :where(.logo-dark, .theme-switch .light-icon),
 [data-theme="dark"] :where(.logo-light, .theme-switch .dark-icon) {
@@ -411,7 +479,9 @@ main { flex-grow: 1; }
   background-color: var(--alpha-10);
 }
 
-.mobile-nav .nav-link[aria-current="true"] { color: var(--on-background); }
+.mobile-nav .nav-link[aria-current="true"] {
+  color: var(--on-background);
+}
 
 .mobile-nav .nav-link[aria-current="true"] .item-icon {
   background-color: var(--active-indicator);
@@ -425,7 +495,9 @@ main { flex-grow: 1; }
   #HERO
 \*-----------------------------------*/
 
-.hero { padding-inline: 16px; }
+.hero {
+  padding-inline: 16px;
+}
 
 .banner-card {
   background-color: var(--image-background);
@@ -484,4 +556,21 @@ main { flex-grow: 1; }
 
 .search-submit:where(:hover, :focus-visible):not(:active) {
   background-color: var(--primary-hover);
+}
+
+
+
+
+.tab .tab-list {
+  background-color: var(--background);
+  position: sticky;
+  top: var(--header-height);
+  margin-inline: -16px;
+  padding-inline: 16px;
+  margin-block: 16px 12px;
+  z-index: 1;
+}
+
+.tab-panel[hidden] {
+  display: none;
 }
