--- a/PHPAccount/assets/css/style.css
+++ b/PHPAccount/assets/css/style.css
@@ -294,7 +294,10 @@ main {
   letter-spacing: 0.5px;
 }
 
-/*----POMOSNIE WYKORZYSTANY STYL---*/
+
+/*---REUSED STYLE---*/
+
+
 .has-state {
   position: relative;
   overflow: hidden;
@@ -317,11 +320,44 @@ main {
   height: 1em;
   overflow: hidden;
   font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24;
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
 }
+
+.section { margin-block-end: var(--section-gap); }
+
+.container {
+  max-width: 1130px;
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 16px;
+}
+
+.grid-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px 8px;
+}
+
+.img-holder {
+  background-color: var(--image-background);
+  background-image: url("../images/image-placeholder.svg");
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position: center;
+  overflow: hidden;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.section-title { margin-block-end: 12px; }
+
 
 
 .section {
@@ -334,6 +370,37 @@ main {
   margin-inline: auto;
   padding-inline: 16px;
 }
+
+.section { margin-block-end: var(--section-gap); }
+
+.container {
+  max-width: 1130px;
+  width: 100%;
+  margin-inline: auto;
+  padding-inline: 16px;
+}
+
+.grid-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px 8px;
+}
+
+.img-holder {
+  background-color: var(--image-background);
+  background-image: url("../images/image-placeholder.svg");
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position: center;
+  overflow: hidden;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 
 .tab-list {
@@ -441,9 +508,9 @@ main {
 }
 
 
-/*-----------------------------------*\
-  #MOBILE NAV
-\*-----------------------------------*/
+
+  /*---MOBILE NAV---*/
+
 
 .mobile-nav {
   position: fixed;
@@ -491,9 +558,9 @@ main {
   font-variation-settings: 'FILL' 1;
 }
 
-/*-----------------------------------*\
-  #HERO
-\*-----------------------------------*/
+
+ /*---HERO---*/
+
 
 .hero {
   padding-inline: 16px;
@@ -573,4 +640,242 @@ main {
 
 .tab-panel[hidden] {
   display: none;
+}
+
+/**
+ * Secondary tab
+ */
+
+ .tab-list {
+  display: flex;
+  color: var(--on-background-variant);
+  box-shadow: inset 0 -1px 0 var(--outline);
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+
+.tab-list::-webkit-scrollbar { display: none; }
+
+.tab-btn {
+  height: 48px;
+  padding-inline: 24px;
+  border-block-end: 2px solid transparent;
+  transition: var(--transition-short);
+  flex: 1 0 80px;
+}
+
+.tab-btn:where(:hover, :focus-visible):not(:active) {
+  background-color: var(--alpha-10);
+}
+
+.tab-btn[aria-selected="true"] {
+  color: var(--on-background);
+  border-color: var(--primary);
+}
+
+
+
+/**
+ * Skeleton
+ */
+ .skeleton {
+  background-color: var(--on-background);
+  animation: skeleton-loading 500ms linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+  0% { opacity: 0.2; }
+  100% { opacity: 0.4; }
+}
+
+.skeleton-card .card-banner {
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  border-radius: var(--radius-4);
+}
+
+.skeleton-card .card-title {
+  margin-block: 8px;
+  height: 16px;
+  width: 50%;
+}
+
+.skeleton-card .card-text {
+  height: 12px;
+  width: 80%;
+}
+
+/**
+ * Card
+ */
+
+ .card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card:not(:has(.skeleton)) {
+  animation: fade-in 500ms var(--transition-timing-function) forwards;
+  transform: translateY(30px);
+  opacity: 0;
+}
+
+@keyframes fade-in {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.card-media {
+  aspect-ratio: 1 / 1;
+  border-radius: var(--radius-4);
+}
+
+.card-body {
+  flex-grow: 1;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.card-link {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow-y: hidden;
+  transition: var(--transition-short);
+}
+
+.card-link:where(:hover, :focus-visible) { color: var(--primary); }
+
+.card-link::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+}
+
+.card :where(.meta-wrapper, .meta-item) {
+  display: flex;
+  align-items: center;
+}
+
+.card .meta-wrapper { justify-content: space-between; }
+
+.card .meta-item { gap: 8px; }
+
+.card .meta-item .material-symbols-outlined { font-size: 1.8rem; }
+
+.saved .bookmark-add,
+.removed .bookmark { display: none; }
+
+.saved .bookmark { font-variation-settings: "FILL" 1; }
+
+
+
+/*---TAB---*/
+
+
+.tab .tab-list {
+  background-color: var(--background);
+  position: sticky;
+  top: var(--header-height);
+  margin-inline: -16px;
+  padding-inline: 16px;
+  margin-block: 16px 12px;
+  z-index: 1;
+}
+
+.tab-panel[hidden] { display: none; }
+
+.tab .btn-secondary {
+  max-width: 100%;
+  margin-block-start: 12px;
+}
+
+
+
+ /*--- RECIPE SLIDER---*/
+
+
+.slider {
+  --gap: 8px;
+  position: relative;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-block-end: 5px;
+}
+
+.slider::-webkit-scrollbar { height: 4px; }
+
+.slider::-webkit-scrollbar-thumb { background-color: transparent; }
+
+.slider:where(:hover, :focus-within)::-webkit-scrollbar-thumb {
+  background-color: var(--alpha-10);
+}
+
+.slider-wrapper {
+  display: flex;
+  align-items: stretch;
+  gap: var(--gap);
+  transition: var(--transition-medium);
+}
+
+.slider-item {
+  min-width: calc(50% - 4px);
+  scroll-snap-align: start;
+}
+
+.load-more-card {
+  height: 100%;
+  background-color: var(--primary-container);
+  border-radius: var(--radius-4);
+  border: 1px solid var(--outline);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+
+/* badge button */
+
+.badge-btn {
+  height: 40px;
+  border-radius: var(--radius-pill);
+  background-color: var(--badge-btn);
+  color: var(--on-badge-btn);
+  max-width: max-content;
+  padding-inline: 16px;
+  display: grid;
+  place-items: center;
+}
+
+
+
+/*---TAG---*/
+
+
+.tag { text-align: center; }
+
+.tag .section-text {
+  max-width: 50ch;
+  margin-inline: auto;
+}
+
+.tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-block-start: 24px;
 }
