--- a/PHPAccount/assets/css/style.css
+++ b/PHPAccount/assets/css/style.css
@@ -879,3 +879,22 @@ main {
   gap: 8px;
   margin-block-start: 24px;
 }
+
+
+/*---Footer---*/
+
+.footer .logo { display: none; }
+
+.footer {
+  padding: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 12px;
+  border-block-start: 1px solid var(--outline);
+}
+
+.copyright { opacity: 0.8; }
+
+.footer .edamam img { width: 180px; }
