new links for customs

--- a/PHPAccount/assets/css/style.css
+++ b/PHPAccount/assets/css/style.css
@@ -1972,7 +1972,7 @@ main {
   background-color: var(--background);
 }
 
-.recepe-card 
+.recipeContainer 
 {
   border: 1px solid #ccc;
   border-radius: 5px;
